--- a/animated cards/style.css
+++ b/animated cards/style.css
@@ -129,34 +129,392 @@ opacity: 1;
 transform: translateY(9dvh);
 }
 
-.star{
+
+
+
+
+/* Stars Background CSS */
+
+.star-bg{
+    opacity: 0;
+}
+
+.skill-card:hover .star-bg{
+    opacity: 1;
+}
+
+.shooting-star {
+    position: absolute;
+    right: 50%;
+    top: -25.59%;
+    width: 1px;
+    height: 70px;
+    background: #fff;
+    -webkit-transform: rotate(-15deg);
+    -ms-transform: rotate(-15deg);
+    transform: rotate(-15deg);
+    -webkit-animation: shootingStar;
+    animation: shootingStar;
+    -webkit-animation-duration: 9s;
+    animation-duration: 9s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+.shooting-star2 {
+    top: -23.59%;
+    -webkit-animation: shootingStar2;
+    animation: shootingStar2;
+    -webkit-animation-duration: 10s;
+    animation-duration: 10s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    -webkit-animation-delay: 1.5s;
+    animation-delay: 1.5s;
+}
+
+@-webkit-keyframes shootingStar {
+    0% {
+        top: -13.59%;
+        right: 60%;
+    }
+
+    2% {
+        opacity: 0;
+        top: 100%;
+        right: 0%;
+    }
+
+    86% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes shootingStar {
+    0% {
+        top: -13.59%;
+        right: 60%;
+    }
+
+    2% {
+        opacity: 0;
+        top: 100%;
+        right: 0%;
+    }
+
+    86% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@-webkit-keyframes shootingStar2 {
+    0% {
+        top: -23.59%;
+        right: 50%;
+    }
+
+    2% {
+        opacity: 0;
+        top: 100%;
+        right: -17%;
+    }
+
+    86% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes shootingStar2 {
+    0% {
+        top: -23.59%;
+        right: 50%;
+    }
+
+    2% {
+        opacity: 0;
+        top: 100%;
+        right: -17%;
+    }
+
+    86% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+.star {
     width: 2px;
     height: 2px;
     border-radius: 50%;
     background-color: #fff;
     position: absolute;
-    opacity: 0;
+    opacity: 0.5;
     display: block;
 }
 
 .star1 {
     top: 2%;
     left: 25%;
+    -webkit-animation: starFlicker;
     animation: starFlicker;
+    -webkit-animation-duration: 3s;
     animation-duration: 6s;
+    -webkit-animation-iteration-count: infinite;
     animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
     animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
     animation-fill-mode: forwards;
+}
+
+.star2 {
+    top: 1.3%;
+    left: 48%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 2s;
+    animation-duration: 4s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.5s;
+    animation-delay: 0.5s;
+}
+
+.star3 {
+    top: 20%;
+    left: 36%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 4s;
+    animation-duration: 8s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 1s;
+    animation-delay: 1s;
+}
+
+.star4 {
+    top: 17%;
+    left: 5%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 4s;
+    animation-duration: 7s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.8s;
+    animation-delay: 0.8s;
+}
+
+.star5 {
+    top: 11%;
+    right: 19%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 4s;
+    animation-duration: 8s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+
+.star6 {
+    top: 4%;
+    right: 24%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.9s;
+    animation-delay: 0.9s;
+}
+
+.star7 {
+    top: 3%;
+    left: 29%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 5s;
+    animation-duration: 5s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 1.2s;
+    animation-delay: 1.2s;
+}
+
+.star8 {
+    top: 18%;
+    left: 56%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 3s;
+    animation-duration: 7s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.4s;
+    animation-delay: 0.4s;
+}
+
+.star9 {
+    top: 31%;
+    left: 57%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 4s;
+    animation-duration: 4s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.1s;
+    animation-delay: 0.1s;
+}
+
+.star10 {
+    top: 27%;
+    left: 12%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 4s;
+    animation-duration: 4s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+
+.star11 {
+    top: 7%;
+    right: 31%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 1.4s;
+    animation-delay: 1.4s;
+}
+
+.star12 {
+    top: 35%;
+    right: 12%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 4.5s;
+    animation-duration: 4.5s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 1.1s;
+    animation-delay: 1.1s;
+}
+
+.star13 {
+    top: 12%;
+    right: 25%;
+    -webkit-animation: starFlicker;
+    animation: starFlicker;
+    -webkit-animation-duration: 3.3s;
+    animation-duration: 3.3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    -webkit-animation-delay: 0.7s;
+    animation-delay: 0.7s;
+}
+
+@-webkit-keyframes starFlicker {
+    0% {
+        opacity: 0.2;
+    }
+
+    50% {
+        opacity: 0.8;
+    }
+
+    100% {
+        opacity: 0.2;
+    }
 }
 
 @keyframes starFlicker {
     0% {
         opacity: 0.2;
     }
+
     50% {
         opacity: 0.8;
     }
-    
+
     100% {
         opacity: 0.2;
     }
