--- a/3d cards/style.css
+++ b/3d cards/style.css
@@ -23,6 +23,7 @@ height: 600px;
 position: relative;
 transform-style: preserve-3d;  /* Ensures 3D elements are properly rendered */
 transition: transform 0.8s ease-in-out;  /* Smooth transition for flipping */
+perspective: 1000px; /* Create the 3D effect */
 }
 
 .card-front,
@@ -38,6 +39,7 @@ border-radius: 10px;
 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 text-align: center;
 transform-style: preserve-3d;  /* Ensure the content inside respects the 3D effect */
+perspective: 1000px; /* Create the 3D effect */
 }
 
 .card-front {
@@ -61,9 +63,9 @@ text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6),   /* Basic shadow for depth */
         6px 6px 12px rgba(0, 0, 0, 0.2);  /* Deeper shadow for stronger 3D effect */
 transform: translateZ(100px);
 }
-.card-container:hover .card {
-transform: rotateY(-180deg);  /* Flip the card when hovered */
-}
+/* .card-container:hover .card {
+transform: rotateY(-180deg);
+} */
 
 
 
@@ -579,4 +581,20 @@ transform: translateZ(50px);
   backface-visibility: hidden;
   width: 95%;
   transform: scaleY(2) translateZ(50px);
+}
+
+
+.spline3d{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+spline-viewer {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the 3D content scales correctly */
 }
